--- a/dynamic_ClassicPVP_Settings.ini
+++ b/dynamic_ClassicPVP_Settings.ini
@@ -17,8 +17,6 @@ MaxTamedDinos=6000
 RCONServerGameLogBuffer=600
 AllowHitMarkers=True
 AllowCrateSpawnsOnTopOfStructures=True
-SpectatorPassword=
-RCONEnabled=True
 AdminLogging=False
 ActiveMods=
 TribeLogDestroyedEnemyStructures=True
@@ -30,7 +28,7 @@ NoTributeDownloads=False
 PreventUploadSurvivors=False
 PreventUploadItems=False
 PreventUploadDinos=False
-CrossARKAllowForeignDinoDownloads=True
+CrossARKAllowForeignDinoDownloads=False
 PreventOfflinePvP=False
 PreventTribeAlliances=True
 PreventDiseases=False
@@ -54,7 +52,7 @@ AutoDestroyDecayedDinos=False
 MaxPersonalTamedDinos=1000.000000
 PersonalTamedDinosSaddleStructureCost=19
 DisableImprintDinoBuff=False
-AllowAnyoneBabyImprintCuddle=False
+AllowAnyoneBabyImprintCuddle=True
 UseOptimizedHarvestingHealth=True
 PvPStructureDecay=False
 DisableStructureDecayPVE=True
@@ -66,9 +64,9 @@ DestroyUnconnectedWaterPipes=True
 AlwaysAllowStructurePickup=True
 ClampResourceHarvestDamage=False
 ClampItemSpoilingTimes=False
-TributeCharacterExpirationSeconds=1320000
-TributeItemExpirationSeconds=1320000
-TributeDinoExpirationSeconds=1320000
+TributeCharacterExpirationSeconds=696000
+TributeItemExpirationSeconds=696000
+TributeDinoExpirationSeconds=696000
 AllowSharedConnections=True
 MaxGateFrameOnSaddles=2
 MaxHexagonsPerCharacter=2500000
@@ -91,13 +89,19 @@ TamingSpeedMultiplier=6.000000
 HarvestAmountMultiplier=6.000000
 DisableWeatherFog=True
 MaxPlatformSaddleStructureLimit=50
-AutoDestroyOldStructuresMultiplier=1.000000
 KickIdlePlayersPeriod=3600
 
 [/Script/Engine.GameSession]
 MaxPlayers=100
 
+[MultiHome]
+MultiHome=False
+
 [MessageOfTheDay]
 Message=Welcome to Classic PVP 6x/8x Classic PVP cluster\nPlugins are ORP, Solofarm, Kals Spyglass, Ark Shop & Dino Tracker No Mods\nLast Wipe 8/23/24\ndiscord.gg/dHNXrn8xMV
 Duration=20
+
+[/Game/PrimalEarth/CoreBlueprints/TestGameMode.TestGameMode_C]
+bServerGameLogEnabled=True
+bUseSecureSpawning=True
 
